test/data/semantic/bad/match_arm_enum_variant_duplicated.coy
enum E {
    A(),
    B()
}

fn f(x: E) -> i64 {
    match x {
        E::A() => 0,
        E::A() => 0,
        E::B() => 1
    }
}

fn main() -> () {
    ()
}
